--- a/src/assets/styles/assets/templates.scss
+++ b/src/assets/styles/assets/templates.scss
@@ -1,6 +1,5 @@
-@import './pages/contacts';
+@import './pages/glampings';
 @import './pages/index';
-@import './pages/news';
-@import './pages/projects';
-@import './pages/single-news';
-@import './pages/single-project';
+@import './pages/saunas';
+@import './pages/single-glamping';
+@import './pages/single-sauna';
