--- a/src/assets/styles/assets/vars.scss
+++ b/src/assets/styles/assets/vars.scss
@@ -13,7 +13,7 @@ $bc2: #000;
 $bg-color: #3F5644;
 $accent-color: #E0F09D;
 $text-color: #F2EFE9;
-
+$cubic-btn: cubic-bezier(.12,.57,.41,1);
 @mixin super-title () {
 	font-size: 66px;
 	font-family: $default-font;
