--- a/src/assets/styles/footer.scss
+++ b/src/assets/styles/footer.scss
@@ -22,7 +22,25 @@
 
 .footer-content {
   margin-bottom: 50px;
+  position: relative;
+  .btn-up {
+    display: flex;
+    justify-items: center;
+    gap: 4px;
+    position: absolute;
+    z-index: 2;
+    right: 16px;
+    @include general-text;
+    color: $text-color;
+    @include tablet{
+      right: 16px;
+      gap: 12px;
+    }
+    @include laptop{
+      display: none;
+    }
 
+  }
   @include tablet {
     margin-bottom: 70px;
   }
@@ -49,7 +67,12 @@
 }
 
 .footer-contacts {
+  margin-bottom: 50px;
+  @include tablet {
+    margin-bottom: 70px;
+  }
   @include laptop {
+    margin-bottom: 0px;
     width: calc(50% - 10px);
   }
 
@@ -73,7 +96,7 @@
 
   &__item {
     @include tablet {
-      width: calc(50% - 10px);
+      width: calc(50% - 20px);
     }
 
     @include laptop {
@@ -134,4 +157,26 @@
     opacity: 0.5;
   }
 
+}
+
+.footer-form__title{
+  text-align: center;
+  opacity: 0.5;
+  span {
+    display: block
+  }
+  @include block-title;
+  margin-bottom: 20px;
+  @include tablet {
+    font-size: 4.16vw;
+    margin-bottom: 40px;
+  }
+  @include laptop {
+    span{
+      display: inline;
+    }
+    margin-bottom: 60px;
+    font-size: 2.18vw;
+    text-transform: none;
+  }
 }
