--- a/src/assets/styles/libs.scss
+++ b/src/assets/styles/libs.scss
@@ -1,5 +1,7 @@
 @import '../../../node_modules/intl-tel-input/build/css/intlTelInput.min';
-
+@import '../../../node_modules/swiper/swiper';
+@import '../../../node_modules/swiper/modules/effect-fade/effect-fade';
+@import '../../../node_modules/swiper/modules/grid/grid';
 
 
 .iti {
