--- a/src/assets/styles/pages/index.scss
+++ b/src/assets/styles/pages/index.scss
@@ -70,12 +70,13 @@
     background: linear-gradient(180deg, rgba(0, 0, 0, 0.80) 0%, rgba(0, 0, 0, 0.00) 23.2%), linear-gradient(180deg, rgba(0, 0, 0, 0.00) 76.06%, rgba(0, 0, 0, 0.90) 100%), linear-gradient(0deg, rgba(0, 0, 0, 0.20) 0%, rgba(0, 0, 0, 0.20) 100%);
   }
 
-  video {
+  video,img {
     width: 100%;
     height: 100%;
     object-fit: cover;
 
   }
+
 }
 
 .section-title {
@@ -129,7 +130,7 @@
 .section-descr {
   @include subtitle-text;
   padding-left: 46px;
-
+  
   @include tablet {
     padding-left: 0px;
     max-width: 300px;
@@ -179,15 +180,52 @@
 }
 
 .general-btn {
-  display: flex;
-  padding: 8px 16px 8px 8px;
-  align-items: center;
-  gap: 16px;
+  
+  padding: 8px 8px;
+  
+  
   border-radius: 12px;
   background: $text-color;
   width: 100%;
+  .hover-wrap{
+    width: 100%;
+    position:relative;
+    border-radius: 8px;
+    overflow: hidden;
+    display: flex;
+    align-items: center;
+    gap: 16px;
+    padding-right: 8px ;
+    &::before {
+      content: "";
+      position: absolute;
+      width: 100%;
+      height: 100%;
+      border-radius: 8px;
+      background-color: $bc;
+      transform: translateX(calc(-100% + 64px));
+      z-index: 1;
+      transition: transform 0.8s $cubic-btn;
+    }
+    
+  }
+  &:hover {
+    .hover-wrap::before {
+      
+      transform: translateX(0);
+      
+    }
+    .svg-wrap svg {
+      transform: rotate(45deg);
+    }
+    span {
+      color: $text-color;
+    }
 
+  }
   .svg-wrap {
+    position: relative;
+    z-index: 2;
     display: flex;
     width: 64px;
     height: 64px;
@@ -196,14 +234,18 @@
     align-items: center;
     border-radius: 8px;
     background: $bc;
-
+    
     &>svg {
       width: 24px;
       height: 24px;
+      transition: transform 0.5s linear;
     }
   }
 
-  &>span {
+  span {
+    transition: color 0.5s linear;
+    position: relative;
+    z-index: 2;
     @include subtitle-text;
     white-space: nowrap;
     font-weight: 500;
@@ -229,7 +271,7 @@
       height: 78px;
     }
 
-    &>span {
+      span {
       font-size: 1.25vw;
     }
   }
@@ -554,7 +596,7 @@
     justify-content: center;
     align-items: center;
     gap: 8px;
-
+    color: $text-color;
     p {
       @include block-title;
       text-transform: none;
@@ -742,8 +784,9 @@
   width: 100%;
   position: relative;
   z-index: 2;
-  padding-top: 50px;
   overflow: hidden;
+  // padding-top: 50px;
+  padding-top: 127px;
 
   &::before {
     content: "";
@@ -768,12 +811,13 @@
   }
 
   @include tablet {
-    padding-top: 30px;
+    // padding-top: 30px;
+    padding-top: 184px;
   }
 
   @include laptop {
-    padding-top: 40px;
-
+    // padding-top: 40px;
+    padding-top: 197px;
     .video-frame {
       &::before {
         content: "";
@@ -788,6 +832,7 @@
     }
 
     .section-descr {
+      text-transform: uppercase;
       @include tablet {
         position: static;
       }
@@ -862,7 +907,10 @@
     }
   }
 }
-
+.process.section {
+@include laptop {
+padding-bottom: 350px;}
+}
 .swiper-process {
   .swiper-wrapper {
     align-items: stretch;
@@ -935,3 +983,4 @@
     }
   }
 }
+
