--- a/src/pug/pages/index.pug
+++ b/src/pug/pages/index.pug
@@ -42,11 +42,12 @@ block content
         br
         | with high returns
       a(href="/houses").general-btn
-        .svg-wrap 
-          <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none">
-            <path d="M7.22703 6.77297H16.773V16.3189M16.1101 7.43588L6.43153 17.1144" stroke="#E0F09D" stroke-width="1.2" stroke-linecap="round" stroke-linejoin="round"/>
-          </svg>
-        span House viewing
+        .hover-wrap
+          .svg-wrap 
+            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none">
+              <path d="M7.22703 6.77297H16.773V16.3189M16.1101 7.43588L6.43153 17.1144" stroke="#E0F09D" stroke-width="1.2" stroke-linecap="round" stroke-linejoin="round"/>
+            </svg>
+          span House viewing
   section.advantages.section
     h2.advantages-title.container Why 
       span Mulberry?
@@ -178,7 +179,7 @@ block content
           <source src="./assets/images/hero.mp4">
       </video>
     .container
-      h1.section-title High Demand.
+      h2.section-title High Demand.
         br
         span Fast ROI.
       
@@ -186,11 +187,12 @@ block content
     .hero-bottom-block 
       p.section-descr.tablet-mode Invest in a proven glamping business concept with low entry barriers and quick payback.
       a(href="/houses").general-btn
-        .svg-wrap 
-          <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none">
-            <path d="M7.22703 6.77297H16.773V16.3189M16.1101 7.43588L6.43153 17.1144" stroke="#E0F09D" stroke-width="1.2" stroke-linecap="round" stroke-linejoin="round"/>
-          </svg>
-        span House viewing   
+        .hover-wrap
+          .svg-wrap 
+            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none">
+              <path d="M7.22703 6.77297H16.773V16.3189M16.1101 7.43588L6.43153 17.1144" stroke="#E0F09D" stroke-width="1.2" stroke-linecap="round" stroke-linejoin="round"/>
+            </svg>
+          span House viewing   
   section.section.story
     h2.story-title.container Our Story
     .section-descr-wrap.container
