--- a/src/pug/pages/index.pug
+++ b/src/pug/pages/index.pug
@@ -41,7 +41,7 @@ block content
       p.hero-slogan.tablet-mode Smart investment 
         br
         | with high returns
-      a(href="/houses").general-btn
+      a(href="/glampings.html").general-btn
         .hover-wrap
           .svg-wrap 
             <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none">
