--- a/src/pug/includes/thank-you-popup.pug
+++ b/src/pug/includes/thank-you-popup.pug
@@ -1,23 +1,13 @@
 .thank-you-popup.overlay
   
   .thank-you-popup__text 
-    <svg xmlns="http://www.w3.org/2000/svg" width="71" height="70" viewBox="0 0 71 70" fill="none">
-      <path d="M66.415 32.1043C66.5036 33.0575 66.5489 34.0232 66.5489 34.9995C66.5489 52.0554 52.7224 65.8819 35.6665 65.8819C18.6107 65.8819 4.78418 52.0554 4.78418 34.9995C4.78418 17.9437 18.6107 4.11719 35.6665 4.11719C40.5118 4.11719 45.0965 5.23303 49.1776 7.22176" stroke="url(#paint0_linear_2008_8884)" stroke-width="4" stroke-linecap="round"/>
-      <path d="M26.4033 31.9112L35.668 41.1759L67.5798 9.26416" stroke="url(#paint1_linear_2008_8884)" stroke-width="4" stroke-linecap="round"/>
-      <defs>
-        <linearGradient id="paint0_linear_2008_8884" x1="-1.12946" y1="65.8819" x2="115.213" y2="61.3876" gradientUnits="userSpaceOnUse">
-          <stop offset="0.0146078" stop-color="#B45805"/>
-          <stop offset="0.438451" stop-color="#E38101"/>
-          <stop offset="1" stop-color="#FBF157"/>
-        </linearGradient>
-        <linearGradient id="paint1_linear_2008_8884" x1="22.4609" y1="41.1759" x2="99.9457" y2="37.3137" gradientUnits="userSpaceOnUse">
-          <stop offset="0.0146078" stop-color="#B45805"/>
-          <stop offset="0.438451" stop-color="#E38101"/>
-          <stop offset="1" stop-color="#FBF157"/>
-        </linearGradient>
-      </defs>
+    <svg xmlns="http://www.w3.org/2000/svg" width="70" height="70" viewBox="0 0 70 70" fill="none">
+      <path d="M65.748 32.1043C65.8366 33.0575 65.8819 34.0232 65.8819 34.9995C65.8819 52.0554 52.0554 65.8819 34.9996 65.8819C17.9437 65.8819 4.11725 52.0554 4.11725 34.9995C4.11725 17.9437 17.9437 4.11719 34.9996 4.11719C39.8449 4.11719 44.4295 5.23303 48.5106 7.22176" stroke="#E0F09D" stroke-width="4" stroke-linecap="round"/>
+      <path d="M25.7359 31.9127L35.0006 41.1774L66.9124 9.26562" stroke="#E0F09D" stroke-width="4" stroke-linecap="round"/>
     </svg>
-    h2.thank-you-popup__title Повідомлення надіслано
+    h2.thank-you-popup__title Повідомлення 
+      br 
+      | надіслано
     p.thank-you-popup__descr Дякуємо за звернення. Очікуйте дзвінка наших менеджерів. Бажаємо гарного дня та гарного настрою =)
     button.thank-you-popup__btn.call-us__btn
       <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 16 16" fill="none">
